test/trivial/vass/pragma-error-unrecognized-2.good
pragma-error-unrecognized-2.chpl:2: error: unknown pragma: "this is a non-existing pragma"
