test/trivial/vass/pragma-error-unrecognized-2.chpl
proc test() {
  pragma "this is a non-existing pragma" var a = 1;
  return;
}
